[package]
name = "my_kzg"
version = "0.4.0"
edition = "2018"

[dependencies]
ark-ec = "0.4"
ark-ff = "0.4"
ark-poly = "0.4"
ark-serialize = { version = "0.4", features = [ "derive" ] }
ark-std = "0.4"
ark-groth16 = "0.4"
digest = "0.10.7"
num-traits = "0.2"
itertools = "0.13.0"
rayon = { version = "1", optional = true }

[dev-dependencies]
ark-bls12-381 = { version = "0.4", features = [ "curve" ] }
ark-ed-on-bls12-381 = "0.4"

ark-relations = "0.4"
ark-r1cs-std = "0.4"
blake2 = "0.10.6"

csv = "1"

[features]
default = [ "parallel" ]
parallel = [ "rayon", "ark-ec/parallel", "ark-ff/parallel", "ark-poly/parallel", "ark-std/parallel", "ark-groth16/parallel" ]
print-trace = [ "ark-std/print-trace" ]
